# JAX-Cuda-extension

./: jax_cuda.py  util.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
gpu_ops/: BUILD.bazel  gpu_ops.cpp  kernel_helpers.h  kernel_nanobind_helpers.h  kernels.h  rms_norm_kernels.cu.cc
